--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,7 @@
 header {
-  padding: 0px;
-  background-size: initial;
-  background-position: center;
-  background-attachment: initial;
-  
-/*     background-image: url("../images/Header-Pic.jpeg"); */
+ 
+        
+  background-image: url("./assets/images/pic2.JPEG"); 
   position:sticky;
   top: 0;
 
@@ -14,17 +11,17 @@ header {
   text-align: right;
   font-size: 20px;
   color:rgb(253, 253, 253);
-}
-
-.white-text {
-  padding-right: 20px;
-}
-
-#centerText  {    
-padding-top: 80px;
-}
 
 
+
+  justify-content: space-between;
+
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-position: 80%;
+
+} 
 .wind-image {
 padding: 100px 0px 0px 0px;
 width: 400px;
@@ -107,3 +104,39 @@ align-content: center;
 padding: 20px 0 20px 100px;
 }
 
+.textLink  {
+font-weight: bold;
+font-size: 30px;
+text-align: center;
+background-color: gray;
+}
+
+.white-text {
+padding-right: 20px;
+}
+
+#centerText  {    
+padding-top: 80px;
+}
+
+.textAbove {
+font-size: 15 px;
+font-weight: bold;
+
+}
+.black-text  {
+font-weight: bold;
+font-size: 25px;
+text-align: center;
+ }
+
+.grey-text {
+ font-weight: bold;
+ font-size: 20px;
+ text-shadow: 0px 1px black;
+ }
+.developers-text {
+font-weight: bold;
+font-size: 25px;
+color: black;
+}
