--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,11 @@
-<ol class="post-list">
-  {{#each posts as |post|}}
-  <li>
-    {{> post-info post }}
-  </li>
-  {{/each}}
-</ol>
+  
+    <article class="service">
+     <div class="container">
+       <div class="row"> 
+      <div class="col"><img src="./assets/images/home.jpeg" alt="" /> </div>
+       
+     </div> 
+     </div>
+    </article>
+  
+
