--- a/views/lawyer.handlebars
+++ b/views/lawyer.handlebars
@@ -1,13 +1,36 @@
-<ol class="post-list">
-  {{#each posts as |post|}}
-  <li>
-    {{> lawyer-info post }}
-  </li>
-  {{/each}}
+<section>
+  <h2>Add New Lawyer</h2>
 
-hhhhhhhhh
+  <form class="new-post-form">
+    <div>
+      <label for="post-title">Law Firm Name</label>
+      <input type="text" id="post-title" name="post-title" style="font-size: 18pt; height: 30px; width:600px;" />
+    </div>
+    <div>
+      <label for="post-text">Firm Address </label>
+      <input id="post-text" name="post-text" style="font-size: 18pt; height: 200px; width:600px;"/>
+    </div>
+    <button type="submit" class="button">Create</button>
+  </form>
+</section>
 
- {{{ body }}}
 
 
-</ol>
+
+{{#if posts.length}}
+<section>
+  <h2>List of Lawyers</h2>
+  <ol>
+    {{#each posts as |post|}}
+    <li>
+      {{> lawyer-info post}}
+      <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit Lawyer Information</a>
+    </li>
+    {{/each}}
+  </ol>
+</section>
+{{else}}
+<h6 class="pb-4 has-text-centered is-italic">There are no Lawyers in the list yet</h6>
+{{/if}}
+
+<script src="/javascript/add-lawyer.js"></script>
