--- a/views/partials/lawyer-info.handlebars
+++ b/views/partials/lawyer-info.handlebars
@@ -10,13 +10,11 @@
 
  <div class="card-body">
    <div> {{office_address}} </div>
- 
+   <div> {{contact_number}} </div>
+   <br>
+   <span>Updated by {{user.username}} on {{format_date created_at}} </span>
 
+ </div>
 
-
-    <span>Updated by {{user.username}} on {{format_date created_at}} </span>
-
-  </div>
-
-
-
+   </div>
+</div>
